// Tests when the proto file name clashes with an enum name
// (after converting foo_bar -> FooBar)
syntax = "proto3";
package idea.plugin.protoeditor.java.test;
option java_package = "idea.plugin.protoeditor.java.test";

message NothingHere {
}

enum ClashingEnum {
  ZERO = 0;
  ONE = 1;
}
