// Tests when the proto file name clashes with a message name
// (after converting foo_bar -> FooBar)
syntax = "proto3";
package idea.plugin.protoeditor.java.test;
option java_package = "idea.plugin.protoeditor.java.test";

message NothingHere {
}

message ClashingMessage {
  int32 foo = 1;
}
